--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Crepe recipes!</title>
+        <title>Odin Recipes</title>
     </head>
+
     <body>
-        <h1 id='header'>Recipes</h1>
+        <h1 id='header'>Odin Recipes</h1>
         <div>
             <ul>
                 <li><a href='./recipes/crepes.html'>Crepes recipes</a></li>
+                <li><a href='./recipes/fishtaco.html'>Fish Taco recipes</a></li>
             </ul>
         </div>
         <a href="#header">Return to top</a>
