--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1 id='header'>Odin Recipes</h1>
+
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJiMBp8ZLOrUcMyBNn4zG_k1LOs0oLZJC5lg&usqp=CAU">
+
+
         <div>
             <ul>
                 <li><a href='./recipes/crepes.html'>Crepes recipes</a></li>
